@@ -1,4 +1,5 @@
 dist_bin_SCRIPTS = \
 	makefits \
 	plotpcal \
+	plotpcal2 \
 	showcal
